Kannel config updated

--- a/kannel/kannel.conf
+++ b/kannel/kannel.conf
@@ -7,6 +7,8 @@ smsbox-port = 13001
 admin-password = test
 status-password = test
 log-file = "/var/log/kannel/bearerbox.log"
+store-type = spool
+store-location = "/var/lib/kannel/spool"
 
 #============================================================================
 # SMSC
